# transcribe-audio2text

./: .env.example  README.md  app.py  config.py  init.sh  main.py  pyproject.toml
src/: app.py  config.py  main.py  model.py
static/: styles.css
templates/: index.html
